# image_pixelizer

./: .env.example  .gitignore  EDGE_CASES_VALIDATION.md  KEYBOARD_SHORTCUTS.md  QUICKSTART_VALIDATION.md  README.md  TEST_COVERAGE.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
data/: dmc_colors.csv
docs/: ARCHITECTURE.md  SAM_PROMPTS_GUIDE.md  SAM_SETUP_CHECKLIST.md
specs/001-image-pixelizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-image-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-alternative-background-removal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-photo-editing-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sensitivity-ui/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: __init__.py
src/controllers/: __init__.py  main_controller.py
src/models/: __init__.py  image_model.py  point_selection.py  settings_model.py
src/services/: __init__.py  background_remover.py  color_matcher.py  color_reducer.py  color_reducer_old.py  image_loader.py  image_saver.py  levels_adjuster.py  openai_background_remover.py  operation_history.py  pixelizer.py
src/views/: __init__.py  color_match_display.py  controls_panel.py  image_view.py  levels_window.py  main_window.py  status_bar.py
tests/: __init__.py  conftest.py
tests/gui/: __init__.py  test_color_match_display.py  test_controls_panel.py  test_controls_panel_operations.py  test_image_view.py  test_levels_window.py  (+2 more)
(+38 files in other folders)
